# nl2sql-onprem-bench

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
configs/: run.yaml
results/: codellama-13b.base.jsonl  codellama-13b.base.summary.json  codellama-13b.correct.jsonl  codellama-13b.correct.summary.json  codellama-13b.link.jsonl  codellama-13b.link.summary.json  codellama-13b.link_correct.jsonl  codellama-13b.link_correct.summary.json  codellama-34b.base.jsonl  codellama-34b.base.summary.json  codellama-34b.correct.jsonl  codellama-34b.correct.summary.json  codellama-34b.link.jsonl  codellama-34b.link.summary.json  codellama-34b.link_correct.jsonl  codellama-34b.link_correct.summary.json  codellama-34b.link_emb.jsonl  codellama-34b.link_emb.summary.json  codellama-34b.link_emb_correct.jsonl  codellama-34b.link_emb_correct.summary.json  codellama-7b.base.jsonl  codellama-7b.base.summary.json  codellama-7b.correct.jsonl  codellama-7b.correct.summary.json  codellama-7b.link.jsonl  codellama-7b.link.summary.json  codellama-7b.link_correct.jsonl  codellama-7b.link_correct.summary.json  frontier-32b.md  headline-32b-a100.md  journal-upgrade.md  llama-3.1-8b.base.jsonl  llama-3.1-8b.base.summary.json  llama-3.1-8b.correct.jsonl  llama-3.1-8b.correct.summary.json  llama-3.1-8b.link.jsonl  llama-3.1-8b.link.summary.json  llama-3.3-70b.base.jsonl  llama-3.3-70b.base.summary.json  llama-3.3-70b.correct.jsonl  (+45 more)
scripts/: cost_report.py  linker_recall.py  mcnemar.py  run_bench.py  runpod_bootstrap.sh
src/nl2sql_bench/: __init__.py  data.py  (+5 more)
tests/: test_harness.py
