[project]
name = "nl2sql-onprem-bench"
version = "0.1.0"
description = "Honest, reproducible benchmark of on-prem open-weight LLMs for Text-to-SQL"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30",        # OpenAI-compatible client for vLLM endpoint
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "func-timeout>=4.3",   # bound per-query SQLite execution
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# retrieval-based schema linker (link_emb stages); heavy, install on the GPU box
emb = ["sentence-transformers>=2.7", "numpy>=1.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nl2sql_bench"]
